# ridicrypt-core

./: Cargo.toml
src/: datastores.rs  decrypt.rs  exts.rs  global_key.rs  lib.rs  prelude.rs  settings.rs  utils.rs
