[package]
name = "ridicrypt-core"
version = "0.2.1"
edition = "2024"

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
sha1 = "0.10"
zip = "4.5"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true